--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "dmitrybubyakin/nova-medialibrary-field": "dev-feat-mix",
+        "dmitrybubyakin/nova-medialibrary-field": "^3.0",
         "saintsystems/nova-resource-group-menu": "dev-feat-localization",
-        "spatie/laravel-medialibrary": "^7.14"
+        "spatie/laravel-medialibrary": "^8.0"
     },
     "autoload": {
         "psr-4": {
