--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "php": ">=7.1.0",
     "dmitrybubyakin/nova-medialibrary-field": "dev-feat-mix|^3.0",
     "saintsystems/nova-resource-group-menu": "dev-feat-localization",
-    "spatie/laravel-medialibrary": "^7.0|^8.0"
+    "spatie/laravel-medialibrary": "^7.0|^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
